# topology-collector

./: .gitignore  .zuul.yaml  README.md  clean_tmp.yml  collect.yml  collect_topo.yml  compute_hosts  controller_hosts  get_computes.yml  get_hypervisors.yml  hosts  hypervisors  output.txt  report.yml  requirements.txt  setup.cfg  test-requirements.txt  topo_collect.yml  topology.yml  tox.ini  user_vars.yml
debian/: changelog  control  copyright  install
filter_plugins/: nova.py
nuage-topology-collector/: ansible.cfg  get_topo.yml  hypervisors  topology.yml  user_vars.yml
nuage-topology-collector/filter_plugins/: nova.py
nuage-topology-collector/openstack/: __init__.py  topology_import.py
nuage-topology-collector/openstack/utils/: script_logging.py
nuage_topology_collector/: controllers  get_topo.yml  report.yml  topology.yml  user_vars.yml
nuage_topology_collector/filter_plugins/: dict_to_items.py  ipv4.py  items_to_dict.py  nova.py
nuage_topology_collector/openstack/utils/: script_logging.py
nuage_topology_collector/schema/: topo-collect-sample.json  topo-collect-schema.json
nuage_topology_collector/scripts/: compare_topology.py  generate_topology.py  populate_topology.py  topology_import.py
nuage_topology_collector/scripts/helper/: constants.py  utils.py  (+1 more)
nuage_topology_collector/tests/: test_compare_topology.py  test_hypervisors.py  test_nova.py  test_switches.py  test_topology_import.py
rpm/SPECS/: nuage-topology-collector.spec
schema/: lldpcollector_sample.json  lldpcollector_schema.json  topo-collect-sample.json  topo-collect-schema.json
(+41 files in other folders)
