[metadata]
name = nuage-topology-collector
summary = "Openstack Topolofy Collector for Nuage Networks"
description-file =
    README.md
author = Nokia Inc
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
   nuage_topology_collector
